--- a/styles/style.css
+++ b/styles/style.css
@@ -47,20 +47,28 @@ ol {
   align-items: end;
   gap: 30px;
   max-width: 1140px;
-  min-height: 534px;
 }
+
 .result {
   display: flex;
   flex-direction: column;
   flex: 2;
+  max-height: 456px;
+  max-width: 711px;
 }
+
 .result__video-container {
   margin-bottom: 16px;
-  min-width: 711px;
+  width: 711px;
+  height: 386px;
   position: relative;
 }
+
 .result__video {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 .search-form {
   width: 100%;
@@ -68,17 +76,18 @@ ol {
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 40px;
 }
+
 .search-form__fieldset {
   border: none;
 }
+
 .search-form__fieldset-title {
-  font-family: Fira Sans Condensed;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
   margin-bottom: 5px;
-  border: none;
 }
 .search-form__label {
   display: flex;
@@ -87,7 +96,7 @@ ol {
   gap: 5px;
 }
 
-.search-form__label:hover {
+.search-form__label-text:hover {
   border-bottom: 1px solid #fff;
   cursor: pointer;
 }
@@ -102,7 +111,7 @@ ol {
   background-color: transparent;
   border: none;
   color: rgba(255, 255, 255, 0.7);
-  font-family: Fira Sans Condensed;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -116,6 +125,11 @@ ol {
   outline: none;
 }
 
+.search-form__textfield:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 2px; /*Менял так ?*/
+}
+
 .search-form__checkbox-list {
   display: flex;
   flex-direction: row;
@@ -125,6 +139,7 @@ ol {
 .search-form__checkbox {
   cursor: pointer;
 }
+
 .search-form__pseudo-checkbox {
   cursor: pointer;
   width: 19px;
@@ -136,9 +151,9 @@ ol {
 
 .search-form__pseudo-checkbox::after {
   content: "";
-  width: 14px;
-  height: 14px;
-  background-color: white;
+  width: 15px;
+  height: 15px; /*так?*/
+  background-color: #fff;
   position: absolute;
   inset: 0;
   margin: auto;
@@ -160,7 +175,7 @@ ol {
   background-color: transparent;
   color: #fff;
   text-align: center;
-  font-family: Fira Sans Condensed;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
@@ -168,6 +183,7 @@ ol {
   border: 1px solid white;
   padding: 0;
   margin: 0;
+  appearance: none;
 }
 
 .button:focus {
@@ -189,8 +205,9 @@ ol {
 
 .search-form__submit-button {
   align-self: flex-end;
-  width: 194px;
+  width: 100%;
 }
+
 .content__details {
   display: flex;
   flex-direction: column;
@@ -199,31 +216,31 @@ ol {
   gap: 26px;
   flex: 1;
 }
+
 .title {
   max-width: 260px;
-  max-height: 210px;
   margin: 0;
   color: #fff;
   font-family: Oswald;
   font-size: 75px;
   font-style: normal;
   font-weight: 700;
-  line-height: 94%;
+  line-height: 0.94;
   text-transform: uppercase;
 }
+
 .title .content__accent {
   color: #545050;
   font-family: Oswald;
   font-size: 75px;
   font-style: normal;
   font-weight: 700;
-  line-height: 94%; /* 70.5px */
+  line-height: 0.94; /* 70.5px */
   text-transform: uppercase;
 }
 
 .content__list {
   overflow-y: auto;
-  overflow-x: hidden;
   display: flex;
   min-width: 399px;
   max-height: 298px;
@@ -232,23 +249,32 @@ ol {
   position: relative;
 }
 
-.preloader {
+/*.preloader {
   position: absolute;
-}
+}  Убрал не понял зачем он был*/
 
 .content__list-item:not(:last-child) {
   margin-bottom: 30px;
 }
+
 .content__card-link {
   color: white;
   text-decoration: none;
   cursor: pointer;
   display: block; /*??*/
-  margin: 10px;
+  margin: 2px; /*убрал 10 не получается рамка с лева*/
+}
+
+.content__card-link:hover {
+  text-decoration: underline;
+}
+
+.content__card-link:active {
+  background-color: #545050; /*он уже где то был задан у меня*/
 }
 
 .content__card-link:focus {
-  outline: none;
+  outline: 1px solid #fff;
 }
 
 .content__card-link:focus-visible {
@@ -260,14 +286,6 @@ ol {
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: self-start;
-}
-
-.content__video-card:active {
-  background: #545050;
-}
-
-.content__video-card:focus {
-  outline: 1px solid #fff;
 }
 
 .content__video-card-description-container {
@@ -291,13 +309,9 @@ ol {
   display: inline-block;
 } */
 
-.content__video-card-title:hover {
-  border-bottom: 1px solid #fff;
-}
-
 .content__video-card-description {
   color: #fff;
-  font-family: Fira Sans Condensed;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -305,17 +319,14 @@ ol {
   margin-top: 6px;
 }
 
-.content__video-card-description:hover {
-  border-bottom: 1px solid #fff;
-}
-
 .content__video-card-thumbnail {
   max-width: 194px;
   max-height: 103px;
+  object-fit: cover;
+  object-position: center; /*визуально ни чего не поменялось?*/
 }
 
 .more-button {
-  cursor: pointer;
   width: 399px;
 }
 
@@ -327,4 +338,8 @@ ol {
   clip: rect(0 0 0 0);
   clip-path: inset(50%);
   white-space: nowrap;
+}
+
+.content__card-link_current {
+  background: #545050;
 }
